--- a/frontend/src/Styles/Homepage.css
+++ b/frontend/src/Styles/Homepage.css
@@ -5,6 +5,11 @@
     white-space: nowrap;
   }
 
+  .popular-title{
+    position: relative;
+    margin-left: 51px;
+  }
+
   .popular .popular-content{
     display: inline-block;
 
@@ -20,7 +25,6 @@
     background-color: #f0f0f0;
     border-radius: 10px;
     border: 1px solid hsl(0, 0%, 80%);
- 
   }
 
   .pop1, .pop2, .pop3, .pop4{
