--- a/frontend/src/Styles/Circular.css
+++ b/frontend/src/Styles/Circular.css
@@ -27,15 +27,14 @@
  .circgroup {
     display: flex;
     justify-content: space-between;
-    align-items: center; /* Align items vertically */
-    /*flex-wrap: wrap; /* Allow items to wrap to the next line */
+    align-items: center; 
   }
   
   
   .circular-card img {
     border-radius: 50%;
-    width: 150px; /* Adjust image size */
-    height: 150px; /* Adjust image size */
+    width: 150px; 
+    height: 150px; 
   }
   
   .c1name,
