--- a/frontend/src/Styles/Homepage.css
+++ b/frontend/src/Styles/Homepage.css
@@ -77,7 +77,7 @@
   .cat3, 
   .cat4 {
     display: inline-block;
-    width: 300px;
+    width: 400px;
     height: 400px;
     margin: 0 20px;
     background-color: #f0f0f0;
@@ -85,6 +85,14 @@
     border: 1px solid hsl(0, 0%, 80%);
     justify-content: center;
     text-align: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  }
+
+  .graphic{
+    height: 400px;
+    width: 400px;
+    border-radius: 10px;
   }
   
 
