--- a/frontend/src/Styles/Footer.css
+++ b/frontend/src/Styles/Footer.css
@@ -6,8 +6,9 @@
     padding: 2px;
     font-size: 25px;
     max-height: 120px;
-    margin-top: 1rem;
+    margin-top: 100px;
     width: 100%;
+    
 }
 
 .footer .contactus{
