--- a/frontend/src/Styles/BookTickets.css
+++ b/frontend/src/Styles/BookTickets.css
@@ -72,6 +72,8 @@
   padding: 12px 24px;
   background-color: #28a745;
   color: #fff;
+  border: none;
+  cursor: pointer;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s ease;
