--- a/frontend/src/Styles/signUpPage.css
+++ b/frontend/src/Styles/signUpPage.css
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
+.signupform{
+    justify-content: center;
+    align-items: center;
+    margin-left: 550px;
+    text-align: center;
 }
-.container {
+
+.sign-up-container {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
@@ -12,6 +14,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    text-align: center;
   }
   
   form {
@@ -21,6 +24,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
     text-align: left;
+
   }
   
   h2 {
@@ -33,7 +37,7 @@
     margin-bottom: 5px;
   }
   
-  input[type="email"],
+  input[type="text"],
   input[type="password"] {
     width: calc(100% - 22px);
     padding: 10px;
@@ -60,11 +64,30 @@
     background-color: #0056b3;
   }
   
-  .forgot-password {
-    text-align: right;
-    font-style: italic;
-    margin-bottom: 5px;
-    font-size: 12px;
+  .or {
+    text-align: center;
+    margin: 10px 0;
+    font-weight: italic;
+    color: #555;
+    position: relative;
+  }
+  
+  .or::before,
+  .or::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 40%;
+    height: 1px;
+    background-color: #ccc;
+  }
+  
+  .or::before {
+    left: 0;
+  }
+  
+  .or::after {
+    right: 0;
   }
   
   .additional-links {
@@ -101,32 +124,3 @@
     text-decoration: underline;
   }
   
-  .or {
-    text-align: center;
-    margin: 10px 0;
-    font-weight: italic;
-    color: #555;
-    position: relative;
-  }
-  
-  .or::before,
-  .or::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    width: 40%;
-    height: 1px;
-    background-color: #ccc;
-  }
-  
-  .or::before {
-    left: 0;
-  }
-  
-  .or::after {
-    right: 0;
-  }
-  
-  .hidden {
-    display: none;
-  }
