--- a/frontend/src/Styles/signUpPage.css
+++ b/frontend/src/Styles/signUpPage.css
@@ -130,6 +130,19 @@ form{
   .additional-links #showLoginForm:hover {
     background-color: #c53727;
   }
+
+  .social-links{
+    display: inline;
+  }
+
+  .social-links img{
+    width: 12%;
+    padding: 0.5rem;
+    cursor: pointer;
+    margin: 1rem;
+    border-radius: 2rem;
+    box-shadow: -10px -10px 30px 4px rgba(0,0,0,0.1), 10px 10px 30px 4px rgba(45,78,255,0.15);
+  }
   
   .additional-links a {
     display: block;
