--- a/frontend/src/Styles/signUpPage.css
+++ b/frontend/src/Styles/signUpPage.css
@@ -57,7 +57,7 @@ form{
     box-sizing: border-box;
   }
   
-  input[type="submit"] {
+  .register-btn{
     width: 100%;
     background-color: #007bff;
     color: #fff;
