--- a/frontend/src/Styles/SeeMore.css
+++ b/frontend/src/Styles/SeeMore.css
@@ -1,9 +1,8 @@
 .sm{
-    font-size: 16px;
-    color: gray;
+    font-size: 18px;
+    color: black;
     text-align: right;
     margin-right: 50px;
     margin-top: -40px;
     text-decoration: none;
-    
 }
