--- a/frontend/src/Styles/signUpPage.css
+++ b/frontend/src/Styles/signUpPage.css
@@ -3,7 +3,7 @@
     align-items: center;
     display: flex;
     text-align: center;
-    height: 100vh;
+    height: auto;
 }
 
 form{
@@ -23,6 +23,8 @@ form{
     align-items: center;
     height: 100vh;
     text-align: center;
+    max-width: 400px;
+    overflow: hidden;
 }
   
   form {
