--- a/frontend/src/Styles/Payment.css
+++ b/frontend/src/Styles/Payment.css
@@ -1,10 +1,20 @@
 .pay-container{
     font-size: 30px;
     font-weight: 500;
+    margin: 0 auto;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 .top{
     justify-content: center;
     align-items: center;
     text-align: center;
     margin: 0 auto;
+}
+.checkPayment{
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
